--- a/posts/2016-08-03.md
+++ b/posts/2016-08-03.md
@@ -12,11 +12,13 @@ This series is going to start out intentionally pedantic and simple, to frame th
 
 * [Part 2/x: A very naïve implementation based on sorted lists.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-08-03.md#part-2-a-very-naïve-version-based-on-sorted-lists)
 
-* Part 3/x: Organizing the data into tries.
+* [Part 3/x: Organizing the data into tries.](https://github.com/frankmcsherry/blog/blob/master/posts/2016-08-03.md#part-3-organizing-the-data-into-tries)
 
 * Part 4/x: Adding an index.
 
-* Part 5/x: ...
+* Part 5/x: Navigation rather than enumeration
+
+* Part 6/x: ...
 
 I'd like to think I know exactly where this is going to end up (I have a plan), but for now let's just pretend I know the general direction, and will tell you each time we take a meaningful step.
 
@@ -681,21 +683,17 @@ Let's slot in our sorted list implementation. Get ready for some worse numbers!
 
 For 1000 keys and 1000 values, batch size 1000, printing every 1000, the numbers look like:
 
-	Echidnatron% cargo run --release --bin profile-lists -- 1000 1000 1000 1000
-	     Running `target/release/profile-lists 1000 1000 1000 1000`
-	throughput: 2419446.83 elts/sec @ 1000000 elts
-	throughput: 2157777.54 elts/sec @ 2000000 elts
-	throughput: 1907561.41 elts/sec @ 3000000 elts
-	throughput: 1939368.69 elts/sec @ 4000000 elts
-	throughput: 1694788.02 elts/sec @ 5000000 elts
+	Echidnatron% cargo run --release --bin profile-insert -- 1000 1000 1000 1000 lists
+	     Running `target/release/profile-insert 1000 1000 1000 1000 lists`
+	throughput: 2388709.90 elts/sec @ 1000000 elts
+	throughput: 2111806.18 elts/sec @ 2000000 elts
+	throughput: 1891017.15 elts/sec @ 3000000 elts
+	throughput: 1947063.24 elts/sec @ 4000000 elts
+	throughput: 1706687.56 elts/sec @ 5000000 elts
 	...
-	throughput: 1204330.69 elts/sec @ 99000000 elts
-	throughput: 1210728.25 elts/sec @ 100000000 elts
-	throughput: 1215091.39 elts/sec @ 101000000 elts
-	...
-	throughput: 1092312.51 elts/sec @ 260000000 elts
-	throughput: 1094232.04 elts/sec @ 261000000 elts
-	throughput: 1096708.09 elts/sec @ 262000000 elts
+	throughput: 1193976.71 elts/sec @ 260000000 elts
+	throughput: 1196107.05 elts/sec @ 261000000 elts
+	throughput: 1198720.72 elts/sec @ 262000000 elts
 
 You can see where this is going. Actually, nowhere because it ran out of memory at this point, but the throughput goes down as we run: we are only appending data and never removing anything. Given that our per-record work is "logarithmic", if we keep running forever eventually that is going to increase. The good news is we will run out of memory before it becomes too serious.
 
@@ -740,74 +738,70 @@ fn merge<T: Ord>(source1: Vec<T>, source2: Vec<T>) -> Vec<T> {
 
 If we replace the `buffer.extend(..)` line with `buffer = merge(buffer, ...)` and move the `buffer.sort()` from the end to just after it is collected, we get some better numbers:
 
-	Echidnatron% cargo run --release --bin profile-lists -- 1000 1000 1000 1000
-	     Running `target/release/profile-lists 1000 1000 1000 1000`
-	throughput: 6339778.39 elts/sec @ 1000000 elts
-	throughput: 5848068.07 elts/sec @ 2000000 elts
-	throughput: 5465519.50 elts/sec @ 3000000 elts
-	throughput: 5684741.96 elts/sec @ 4000000 elts
-	throughput: 5109088.94 elts/sec @ 5000000 elts
+	Echidnatron% cargo run --release --bin profile-insert -- 1000 1000 1000 1000 lists
+	     Running `target/release/profile-insert 1000 1000 1000 1000 lists`
+	throughput: 6407104.61 elts/sec @ 1000000 elts
+	throughput: 5731598.78 elts/sec @ 2000000 elts
+	throughput: 5360619.80 elts/sec @ 3000000 elts
+	throughput: 5560609.58 elts/sec @ 4000000 elts
+	throughput: 5005889.36 elts/sec @ 5000000 elts
 	...
-	throughput: 4222326.35 elts/sec @ 99000000 elts
-	throughput: 4243203.70 elts/sec @ 100000000 elts
-	throughput: 4258128.61 elts/sec @ 101000000 elts
-	...
-	throughput: 3949494.99 elts/sec @ 522000000 elts
-	throughput: 3953483.23 elts/sec @ 523000000 elts
-	throughput: 3957824.17 elts/sec @ 524000000 elts
+	throughput: 4083296.32 elts/sec @ 522000000 elts
+	throughput: 4087287.71 elts/sec @ 523000000 elts
+	throughput: 4091650.69 elts/sec @ 524000000 elts
 
-It falls over a little bit later because `merge` allocates half as much memory as `buffer.sort()`. 
+It falls over a later on because `merge` allocates half as much memory as `buffer.sort()`. 
 
 We are now doing better than the many-keys `HashMap` numbers, though not as good as the thousand-keys numbers. This feels pretty good, though if we were to consider lookup times the feeling would pass.
 
 So that we can feel even better about ourselves before we close out our discussion of the very naïve version, let's test a feature that we will eventually want: consolidation of weights for elements with the same `(key,val,time)` fields. As part of `merge`, we can compare just the `(K, V, T)` part of each record, and add weights if they are the same rather than returning both elements. 
 
-	Echidnatron% cargo run --release --bin profile-lists -- 1000 1000 1000 1000
-	     Running `target/release/profile-lists 1000 1000 1000 1000`
-	throughput: 22862046.57 elts/sec @ 1000000 elts
-	throughput: 21750026.25 elts/sec @ 2000000 elts
-	throughput: 21832599.59 elts/sec @ 3000000 elts
-	throughput: 21723036.50 elts/sec @ 4000000 elts
-	throughput: 21753468.62 elts/sec @ 5000000 elts
+Let's advance the time every round (one million records) rather than for every record and see what happens:
+
+	Echidnatron% cargo run --release --bin profile-insert -- 1000 1000 1000 1000 lists
+	     Running `target/release/profile-insert 1000 1000 1000 1000 lists`
+	throughput: 24726955.68 elts/sec @ 1000000 elts
+	throughput: 24264013.63 elts/sec @ 2000000 elts
+	throughput: 23780381.90 elts/sec @ 3000000 elts
+	throughput: 23490919.41 elts/sec @ 4000000 elts
+	throughput: 23126086.72 elts/sec @ 5000000 elts
 	...
-	throughput: 20459218.12 elts/sec @ 99000000 elts
-	throughput: 20448964.09 elts/sec @ 100000000 elts
-	throughput: 20447100.05 elts/sec @ 101000000 elts
+	throughput: 22463200.83 elts/sec @ 998000000 elts
+	throughput: 22462284.77 elts/sec @ 999000000 elts
+	throughput: 22462328.48 elts/sec @ 1000000000 elts
 	...
-	throughput: 20240488.38 elts/sec @ 999000000 elts
-	throughput: 20242328.79 elts/sec @ 1000000000 elts
-	throughput: 20242923.04 elts/sec @ 1001000000 elts
+	throughput: 22394475.86 elts/sec @ 9999000000 elts
+	throughput: 22394548.97 elts/sec @ 10000000000 elts
+	throughput: 22394751.84 elts/sec @ 10001000000 elts
 	...
-	throughput: 20447534.22 elts/sec @ 9999000000 elts
-	throughput: 20447501.86 elts/sec @ 10000000000 elts
-	throughput: 20447385.10 elts/sec @ 10001000000 elts
 
 Ok, now we are talking. Twenty million inserts per second. This should actually still degrade, just much more slowly; the process had reach about 304MB at this point, ten billion elements in.
 
-What happened? The way the code is written the `time` field only gets bumped after each million elements, and because the data are a bit degenerate, with exactly as many keys as values, there are only one thousand distinct values in that million elements. They get compacted quite well! Each round of one million inserts is compacted down to one thousand, before being merged with any older elements.
+What happened? The data are a bit degenerate, with exactly as many keys as values, there are only one thousand distinct values in that million elements, all with the same time. They get compacted quite well! Each round of one million inserts is compacted down to one thousand, before being merged with any older elements.
 
 This is perhaps an interesting representation of what a hot set of updates might look like, with periodic transitions to new hot elements. Perhaps not. 
 
 We can do a different experiment where we have 16 million keys, one value, and one timestamp, something like the 16 million key example above where we are able to update in place.
 
-	Echidnatron% cargo run --release --bin profile-lists -- 16000000 1 1000 1000
-	     Running `target/release/profile-lists 16000000 1 1000 1000`
-	throughput: 6695085.83 elts/sec @ 1000000 elts
-	throughput: 6019800.15 elts/sec @ 2000000 elts
-	throughput: 5659953.08 elts/sec @ 3000000 elts
-	throughput: 5808231.16 elts/sec @ 4000000 elts
-	throughput: 5213819.41 elts/sec @ 5000000 elts
+	Echidnatron% cargo run --release --bin profile-insert -- 16000000 1 1000 1000 lists
+	   Compiling trace_report v0.1.0 (file:///Users/mcsherry/Projects/trace_report)
+	     Running `target/release/profile-insert 16000000 1 1000 1000 lists`
+	throughput: 6919814.42 elts/sec @ 1000000 elts
+	throughput: 6474400.62 elts/sec @ 2000000 elts
+	throughput: 6002611.86 elts/sec @ 3000000 elts
+	throughput: 6110876.73 elts/sec @ 4000000 elts
+	throughput: 5454596.96 elts/sec @ 5000000 elts
 	...
-	throughput: 4146630.65 elts/sec @ 99000000 elts
-	throughput: 4167738.99 elts/sec @ 100000000 elts
-	throughput: 4176494.03 elts/sec @ 101000000 elts
+	throughput: 5055585.25 elts/sec @ 32000000 elts
+	throughput: 4649927.35 elts/sec @ 33000000 elts
+	throughput: 4697103.11 elts/sec @ 34000000 elts
 	...
-	throughput: 4063433.45 elts/sec @ 999000000 elts
-	throughput: 4053770.59 elts/sec @ 1000000000 elts
-	throughput: 4055836.85 elts/sec @ 1001000000 elts
+	throughput: 4465313.52 elts/sec @ 999000000 elts
+	throughput: 4454331.37 elts/sec @ 1000000000 elts
+	throughput: 4456430.71 elts/sec @ 1001000000 elts
 	...
 
-This looks like it is slowing down a bit, but it shouldn't really be (dunno!). It is sitting steady around between 600 megabytes and 1GB (up and down a bit, as lists come and go). For 16 million 32 byte records (multiplied: 512MB) this lines up with our expectations perfectly. This is better than our hash table implementation up above, and with a much more compact memory footprint. It is yet not better than the informative linked paper, and may not become so, but I think it is a good start; we have more plans in store!
+In principle this should stabilize once we've seen roughly twice the number of keys (32 million, which is why that line is up there), so that all of the logarithmically many arrays can fill up. It is sitting steady around between 600 megabytes and 1GB (up and down a bit, as lists come and go). For 16 million 32 byte records (multiplied: 512MB) this lines up with our expectations perfectly. This is better than our hash table implementation up above, and with a much more compact memory footprint. It is yet not better than the informative linked paper, and may not become so, but I think it is a good start; we have more plans in store!
 
 #### Look-up throughput
 
@@ -815,8 +809,477 @@ Looking things up is going to be slow. We are going to improve it later on (hint
 
 ## Part 3: Organizing the data into tries.
 
-Coming later!
+Our next stop is organizing our data even further. Sorted lists are pretty organized already, but there is still room to improve the representation and make our lives easier. The main thing that sorted lists don't reveal to use is "where do we find those tuples with a indicated key, or key and value?"
+
+Our new representation of a sorted sequence of `(K, V, T, isize)` maintains three lists: 
+
+1.	A list of `(T, isize)` pairs, with one entry for each entry in our original list.
+
+	This list is just the list of the `T` and `isize` values from our sorted sequence, in the same order.
+
+2.	A list of `(V, usize)` pairs, with one entry for each distinct `(key, val)` in our original list.
+
+	This list records the `val` for each distinct `(key, val)` pair, and where its associated `(T, isize)` pairs *end*. That is, the `usize` field is the offset in the list above just after the last element starting with `(key, val)`. "Just after" rather than "just at" so that we can use it as an upper bound while iterating.
+
+3.	A list of `(K, usize)` pairs, with one entry for each distinct key in our original list.
+
+	This list records the distinct keys we see, and where each's associated `(V, usize)` pairs *end*. The `usize` field is the offset in the `(V, usize)` list, not the `(T, isize)` list, just after the last element with the corresponding key.
+
+Normally we think of this as a tree, and write it the other way around, with the keys first, then values, and finally the data bits, because that is the direction we will approach it when we come looking for information.
+
+```rust
+/// Equivalent to a `Vec<(K, V, T, isize)>`
+pub struct Trie<K, V, T> {
+	keys: Vec<(K, usize)>,
+	vals: Vec<(V, usize)>,
+	history: Vec<(T, isize),
+}
+```
+
+When we approach this data, we come with a key in mind, and looking only at key-related data (the `(K, usize)` list) can determine (i) whether the key is present, (ii) how many values there are, (iii) where to find them. If we want to dive deeper, we can start navigating the values, using only value-related data (a slice of the `(V, usize)` list), and determine the same things for values and times as we learned for keys and values.
+
+This isn't exactly a trie the way they are normally presented; each layer is flattened into a hunk of contiguous memory, for example. But the spirit is similar, and if anyone knows a better name, it seems like a quite natural representation.
+
+Each `Trie<K, V, T>` is equivalent to one of our ordered lists `Vec<(K, V, T, isize)>`, and we can use multiple tries the same way our `Lists<K, V, T>` structure did with lists, to accommodate writes by collecting and merging different sized lists.
+
+```rust
+/// Equivalent to `Lists<K, V, T>`.
+pub struct Tries<K, V, T> {
+	layers: Vec<Trie<K, V, T>>,
+}
+``` 
+
+We now get to re-write a few things, most notably the merge logic for tries. 
+
+Merging tries is going to be more painful than merging sorted lists, but some things are simpler (for the computer, not for us). When we see a key in one trie but not another we can just copy its associated contents over. We don't have to pay a per-tuple comparison cost, as we did when we merged sorted lists. If we end up with two of the same keys, we can do the same thing for values: if a value is in one trie but not the other, just copy its `(T, isize)` history over. A lot of merge logic can be replaced with something that looks more like a `memcpy`.
+
+### Merging tries
+
+Let's write the merge logic for our tries. It is going to be a bit explicit and gross as we go, but at the end we will think a bit about how to make it more general. The good news: there is already a crate for it!
+
+So, we want to write a method whose signature looks like
+
+```rust
+fn merge<K: Ord, V: Ord, T: Ord>(trie1: Trie<K, V, T>, trie2: Trie<K, V, T>) -> Trie<K, V, T> {
+
+}
+```
+
+Part of what will make this fun and challenging is that we are still using owned data everywhere, and haven't permitted `K`, `V`, or `T` to be easily copied or cloned. That means we have to be careful to make sure we get these fields out of our input tries to place in the output trie.
+
+The first thing we are going to do is take each trie, which contains three vectors, and turn each into an iterator. We are also going to hit `keys` and `vals` with some iterator logic that has them emit counts rather than offsets. Here is one example, which repeats identically for the others:
+
+```rust
+let mut keys1 = trie1.keys.into_iter()
+						  .scan(0, |sum, (key, off)| { 
+						      let cnt = off - *sum; 
+						      *sum = off; 
+						      Some((key, cnt))
+						  })
+						  .peekable();
+```
+
+This snippet takes ownership of `trie1.keys` and turns it into an iterator of owned `K` elements. It then wraps this iterator is an adaptor that keeps a running view of offsets, and subtracts them from each to get the count of the number of elements. This will be easier to use, and writing it this way is easier for our logic later on (rather than having some globally named offsets that we have to subtract from everything).
+
+With these iterators in place, let's write the core loop that moves through the keys:
+
+```rust
+let mut result = Trie::new();
+
+while keys1.peek().is_some() && keys2.peek().is_some() {
+	match keys1.peek().unwrap().0.cmp(&keys2.peek().unwrap().0) {
+		Ordering::Less => { unimplemented!() },
+		Ordering::Equal => { unimplemented!() },
+		Ordering::Greater => { unimplemented!() },		
+	}
+}
+
+// drain whatever remains in either keys1 or keys2
+for (key, key_cnt) in keys1 { unimplemented!() }
+for (key, key_cnt) in keys2 { unimplemented!() }
+
+result
+```
+
+I've not put the logic in yet, because the complete thing is pretty large. Instead, let's look at each fragment one piece at a time. 
+
+The logic for the cases where the keys an *in*equal is not horrible. We want to copy the key, values, and histories into `result`. Here is the code for the `Ordering::Less` case, where we want to read out of the iterators derived from `trie1`.
+
+```rust
+// append in key, vals, and their histories.
+let (key, key_cnt) = keys1.next().unwrap();
+for (val, val_cnt) in vals1.by_ref().take(key_cnt) {
+	result.hist.extend(hist1.by_ref().take(val_cnt));
+	result.vals.push((val, result.hist.len()));
+}
+result.keys.push((key, result.vals.len()));
+```
+
+This isn't so bad, is it? We pop open the key and its count, grab that many entries from the `vals1` iterator, and for each of its entries (a value and count) we grab the right number of entries from `hist1`. The main non-obvious thing, from my point of view, is the use of `by_ref()`. This creates a new iterator from a mutable reference to an iterator; this means we can use the iterator without consuming it, which something like `take` would otherwise do.
+
+This same logic, excluding the first line, is what we use to drain `keys1` at the end of the loop, too. And it is the same logic, swapping `1` for `2` we use in the `Ordering::Greater` case and to drain `keys2`. The only thing left is to investigate the `Ordering::Equal` case.
+
+The case where the keys are equal means we need to do a merge, and that isn't all that different from what we've just written, with a few important changes and exceptions. Obviously we will be merging values rather than keys, but perhaps less obviously at the end of the merge we may not have added any values, if things cancelled.
+
+Here is what I wrote for the equals case, with comments calling out the less-obvious changes:  
+
+```rust
+// important: track to know if we added any vals.
+let vals_len = result.vals.len();
+
+let (key, key1_cnt) = keys1.next().unwrap();
+let (___, key2_cnt) = keys2.next().unwrap();
+
+let mut vals1 = vals1.by_ref().take(key1_cnt).peekable();
+let mut vals2 = vals2.by_ref().take(key2_cnt).peekable();
+
+while vals1.peek().is_some() && vals2.peek().is_some() {
+	match vals1.peek().unwrap().0.cmp(&vals2.peek().unwrap().0) {
+		Ordering::Less => { unimplemented!() },
+		Ordering::Equal => { unimplemented!() },
+		Ordering::Greater => { unimplemented!() },
+	}
+}
+
+for (val, cnt) in vals1 { unimplemented!() }
+for (val, cnt) in vals2 { unimplemented!() }
+
+// important: conditionally write `key`.
+if result.vals.len() > vals_len {
+	result.keys.push((key, result.vals.len()));
+}
+```
+
+The main important detail is that we capture `result.vals.len()` before we start work, so that once we are done we can see if any values actually landed in `result`. If not, we don't push the key because there is no corresponding data.
+
+As before, the cases where we have a value from just one trace are relatively simple. Here is my code for the `Ordering::Less` case:
+
+```rust
+let (val, cnt) = vals1.next().unwrap();
+result.hist.extend(hist1.by_ref().take(cnt));
+result.vals.push((val, result.hist.len()));
+```
+
+This is really quite short now, and is essentially the same code from the `Ordering::Less` case for keys, without the loop over values.
+
+What about the `Ordering::Equals` case? Are we near the bottom of the rabbit hole? Very nearly; we just need to merge the histories of equal values. The main thing to look for here is in the `Ordering::Equal` case, where we only conditionally write a time if the sum of deltas is non-zero. This is the root of the problem that makes us conditionally write values and keys. By "problem" I mean "optimization", of course.
+
+```rust
+let (val, val1_cnt) = vals1.next().unwrap();
+let (___, val2_cnt) = vals2.next().unwrap();
+
+let hist_len = result.hist.len();
+
+let mut hist1 = hist1.by_ref().take(val1_cnt).peekable();
+let mut hist2 = hist2.by_ref().take(val2_cnt).peekable();
+
+while hist1.peek().is_some() && hist2.peek().is_some() {
+	match hist1.peek().unwrap().0.cmp(&hist2.peek().unwrap().0) {
+		Ordering::Less => { 
+			result.hist.push(hist1.next().unwrap()); 
+		}
+		Ordering::Equal => { 
+			let (time, delta1) = hist1.next().unwrap();
+			let (____, delta2) = hist2.next().unwrap();
+			if delta1 + delta2 != 0 {
+				result.hist.push((time, delta1 + delta2));
+			}
+		}
+		Ordering::Greater => { 
+			result.hist.push(hist2.next().unwrap()); 
+		}
+	}
+}
+
+result.hist.extend(hist1);
+result.hist.extend(hist2);
+
+if result.hist.len() > hist_len {
+	result.vals.push((val, result.hist.len()));
+}
+```
+
+Ok! I think we are done with that. Well done sticking through with us.
+
+You might have notice that we wrote the same sort of code a lot, over and over. It's true. Could we possibly re-factor this a bit and make something more general? Yes! In fact, there is already a crate that does this and some other cool things, over at [frankmcsherry/trie](https://github.com/frankmcsherry/trie). 
+
+What's an example "cool thing"? When we see that `key1 < key2` or somesuch, we just write out `key1` and move along. Instead, we *could* ask for how many keys `key1` this is true, and then copy them all over in batch. Awesomely, we can find out how many keys are less than `key2` using time logarithmic in that number, doing an exponentially growing search. This can be a great optimization when there are runs of keys in one trace but not the other, which is not uncommon in cases like (i) bulk loading of data or (ii) merging many updates to few hot keys. It results in fewer, larger copies which is always good news.
+
+### Iterating over data 
+
+Recall that our iterator interface for the `Trace` trait looks like so:
+
+```rust
+/// retrieves differences associated with a specified key.
+fn get(&mut self, key: &Key) -> Self::OutputIterator;
+
+/// An iterator defined by the implementation to produce results.
+type OutputIterator: Iterator<Item=(&'a Key, &'a Val, &'a Time, isize)>;
+```
+
+This is part of our interface, so we should probably implement that. Recall that the enumerated items are not required to be in any particular order. With that in mind, we can largely steal the implementation for `Lists` as long as we write an iterator for each `Trie`.
+
+A `Trie` output iterator is just going to have a few cursors into its arrays (three, specifically), and move them forward as appropriate.
+
+```rust
+pub struct TrieIter<'a, K:'a, V:'a, T:'a> {
+	keys: (usize, &'a [(K, usize)]),
+	vals: (usize, &'a [(V, usize)]),
+	hist: (usize, &'a [(T, isize)]),
+}
+```
+
+For each field, the first `usize` component indicates at which point the slice starts, so that we can compare positions with the absolute offsets recorded in the trie.
+
+The logic is pretty simple, I think: we always advance `hist`, and once its `usize` offset hits the offset pointed at by `vals` we advance `vals`, and once *it* hits the value pointed at by `keys` we advance `keys`, which probably means we are done.
+
+```rust
+impl<'a, K:'a, V:'a, T:'a> Iterator for TrieIter<'a, K, V, T> {
+	type Item = (&'a K, &'a V, &'a T, isize);
+	fn next(&mut self) -> Option<Self::Item> {
+		if self.hists.1.len() > 0 {
+			let result = (
+				&self.keys.1[0].0,
+				&self.vals.1[0].0,
+				&self.hist.1[0].0,
+				 self.hist.1[0].1,
+			);
+
+			// advance self.hist.
+			self.hist.0 += 1;
+			self.hist.1 = &self.hist.1[1..];
+
+			// maybe advance self.vals.
+			if self.hist.0 == self.vals.1[0].1 {
+				self.vals.0 += 1;
+				self.vals.1 = &self.vals.1[1..];
+
+				// maybe advance self.keys.
+				if self.vals.0 == self.keys.1[0].1 {
+					self.keys.0 += 1;
+					self.keys.1 = &self.keys.1[1..];
+				}
+			}
+
+			Some(result)
+		}
+		else { None }
+	}
+}
+```
+
+This iterator implementation outputs elements in order, but unlike the `Lists` iterator it re-uses a lot of the `&'a K` and `&'a V` references. This is one of the main reasons our `Trace` trait has the constraint
+
+```rust
+type OutputIter: Iterator<Item=(&'a K, &'a V, &'a T, isize)>;
+```
+
+as opposed to a similar but less verbose constraint like
+
+```rust
+type OutputIter: Iterator<Item=&'a (K, V, T, isize)>;
+```
+
+The latter of these two requires the existence of an actual `(K, V, T, isize)` tuple somewhere, and we don't have one of those. Phew, close call on that one.
+
+### Performance measurements
+
+I assert that look-up times are only going to get better with `Tries` as opposed to `Lists`, so lets hold off evaluating look-ups for either of these until we get to the next installment. The short, qualitative version is that we just need to do binary search in the `Vec<(K, usize)>` list, which can be much, much smaller that the full `Vec<(K, V, T, isize)>` list of all tuples, and is never larger (because `usize` is the same size as `isize`).
+
+Instead, for now let's try out insertion throughput. 
+
+We have made a few important changes, mostly in streamlining the merge process, but also in potentially moving around less data, because each trie compresses the data a little bit. If we have lots of repeated keys and values, we end up copying each only once, and reduce our data movement from `(K, V, T, isize)` tuples down to just `(T, isize)` pairs. This is great news for relatively large-ish keys and values. At the same time, if every key and value are distinct, we've only added a few new `usize` fields for each record, and a bunch of crazy logic. 
+
+We should see better performance in some cases, and worse performance in others!
+
+Let's start with the test we've used so far: 1000 keys and 1000 values. Each million elements produces the same set of keys and values, so we do lots of merging and unfortunately no copying, which kinda sucks for us.
+
+	Echidnatron% cargo run --release --bin profile-insert -- 1000 1000 1000 1000 tries
+	     Running `target/release/profile-insert 1000 1000 1000 1000 tries`
+	throughput: 6064802.57 elts/sec @ 1000000 elts
+	throughput: 5650132.30 elts/sec @ 2000000 elts
+	throughput: 5297179.32 elts/sec @ 3000000 elts
+	throughput: 5313736.12 elts/sec @ 4000000 elts
+	throughput: 4959473.91 elts/sec @ 5000000 elts
+	...
+	throughput: 4031347.05 elts/sec @ 522000000 elts
+	throughput: 4033318.14 elts/sec @ 523000000 elts
+	throughput: 4035769.52 elts/sec @ 524000000 elts
+	...
+	throughput: 3819354.47 elts/sec @ 1046000000 elts
+	throughput: 3820566.10 elts/sec @ 1047000000 elts
+	throughput: 3821941.38 elts/sec @ 1048000000 elts
+
+These throughputs always hit the inner merge logic, but fortunately in this case that inner merge logic moves less data around, and we win out a little bit. For reference, here are both the first and final moments of the merging list-based approach with the same arguments, copied from up above:
+
+	Echidnatron% cargo run --release --bin profile-insert -- 1000 1000 1000 1000 lists
+	     Running `target/release/profile-insert 1000 1000 1000 1000 lists`
+	throughput: 6407104.61 elts/sec @ 1000000 elts
+	throughput: 5731598.78 elts/sec @ 2000000 elts
+	throughput: 5360619.80 elts/sec @ 3000000 elts
+	throughput: 5560609.58 elts/sec @ 4000000 elts
+	throughput: 5005889.36 elts/sec @ 5000000 elts
+	...
+	throughput: 4083296.32 elts/sec @ 522000000 elts
+	throughput: 4087287.71 elts/sec @ 523000000 elts
+	throughput: 4091650.69 elts/sec @ 524000000 elts
+
+These arguments, 1000 keys and 1000 values, mean that there really is only one value for each key, equal to itself. Each trie that we merge has the same properties, so we still spend our time doing lots of merges, just on `(T, isize)` elements rather than full `(K, V, T, isize)` tuples. I expected to see some performance improvement.
+
+As it turns out, we do see improved performance when using the [trie crate](https://github.com/frankmcsherry/trie). 
+
+	Echidnatron% cargo run  --release --bin profile-insert -- 1000 1000 1000 1000 trie-crate
+	     Running `target/release/profile-insert 1000 1000 1000 1000 trie-crate`
+	throughput: 7948465.33 elts/sec @ 1000000 elts
+	throughput: 7465856.38 elts/sec @ 2000000 elts
+	throughput: 7140011.66 elts/sec @ 3000000 elts
+	throughput: 7272882.94 elts/sec @ 4000000 elts
+	throughput: 6849094.57 elts/sec @ 5000000 elts
+	...
+	throughput: 6215628.98 elts/sec @ 522000000 elts
+	throughput: 6219111.63 elts/sec @ 523000000 elts
+	throughput: 6223198.90 elts/sec @ 524000000 elts
+	...
+	throughput: 6028748.73 elts/sec @ 1046000000 elts
+	throughput: 6030676.76 elts/sec @ 1047000000 elts
+	throughput: 6032800.13 elts/sec @ 1048000000 elts
+
+I don't have a great explanation for this, other than that the trie crate is largely based on arrays rather than iterators, so Rust's "zero-cost abstraction" mantra might need a check-up. I'll look into this more, because (i) it *shouldn't* be so much of a problem, and (ii) it would be nice to understand better.
+
+The trie-based approach gets us two things in this case, slightly better performance and twice as much capacity before we hit the self-imposed 16GB limit. Navigation should be much faster too, because we only need to poke around in the 1000 keys rather than the 1048000000 or whatever tuples (32GB-ish using lists).
+
+Let's change this up a bit and use 1001 keys, so that we get one million distinct key-value pairs in each batch. This should make for more value merging and less time merging, which isn't great news for tries. It should have no effect on the list based approach, so we will skip re-measuring that.
+
+Here is the `Tries` implementation,
+
+	Echidnatron% cargo run --release --bin profile-insert -- 1000 1001 1000 1000 tries
+	     Running `target/release/profile-insert 1000 1001 1000 1000 tries`
+	throughput: 5013128.28 elts/sec @ 1000000 elts
+	throughput: 4685649.30 elts/sec @ 2000000 elts
+	throughput: 4216060.65 elts/sec @ 3000000 elts
+	throughput: 4272969.87 elts/sec @ 4000000 elts
+	throughput: 3783114.63 elts/sec @ 5000000 elts
+	...
+	throughput: 3438601.60 elts/sec @ 522000000 elts
+	throughput: 3440632.98 elts/sec @ 523000000 elts
+	throughput: 3443512.43 elts/sec @ 524000000 elts
+	...
+	throughput: 3402962.63 elts/sec @ 1046000000 elts
+	throughput: 3403922.25 elts/sec @ 1047000000 elts
+	throughput: 3405376.64 elts/sec @ 1048000000 elts
+
+and the trie crate implementation:
+
+	Echidnatron% cargo run  --release --bin profile-insert -- 1000 1001 1000 1000 trie-crate
+	     Running `target/release/profile-insert 1000 1001 1000 1000 trie-crate`
+	throughput: 5420873.47 elts/sec @ 1000000 elts
+	throughput: 5137352.90 elts/sec @ 2000000 elts
+	throughput: 4694924.92 elts/sec @ 3000000 elts
+	throughput: 4791913.72 elts/sec @ 4000000 elts
+	throughput: 4376992.36 elts/sec @ 5000000 elts
+	...
+	throughput: 4268305.67 elts/sec @ 522000000 elts
+	throughput: 4270360.60 elts/sec @ 523000000 elts
+	throughput: 4273183.70 elts/sec @ 524000000 elts
+	...
+	throughput: 4017279.31 elts/sec @ 1046000000 elts
+	throughput: 4018399.22 elts/sec @ 1047000000 elts
+	throughput: 4019631.23 elts/sec @ 1048000000 elts
+
+These times are less great because we spend relatively little time doing merges of `(T, isize)` lists; each round of one million records has only a single time for each key-value pair, and most of the merging has relatively short lists of times. This is where the trie approaches would have gained ground, thinking relatively less about keys and values than they think about times. Instead, the trie crate implementation ends up pretty close to the sorted list implementation.
+
+On the other end of the spectrum, we could think consider just one key and one value, completely unreasonable but still interesting to check out. The times are all distinct, so no records get coalesced here.
+
+The `Tries` implementation yields:
+
+	Echidnatron% cargo run --release --bin profile-insert -- 1 1 1000 1000 tries
+	     Running `target/release/profile-insert 1 1 1000 1000 tries`
+	throughput: 8349560.50 elts/sec @ 1000000 elts
+	throughput: 7402898.58 elts/sec @ 2000000 elts
+	throughput: 6880129.36 elts/sec @ 3000000 elts
+	throughput: 6982623.11 elts/sec @ 4000000 elts
+	throughput: 6286018.40 elts/sec @ 5000000 elts
+	...
+	throughput: 5265066.94 elts/sec @ 522000000 elts
+	throughput: 5267632.95 elts/sec @ 523000000 elts
+	throughput: 5271201.16 elts/sec @ 524000000 elts
+	...
+	throughput: 4738916.24 elts/sec @ 1046000000 elts
+	throughput: 4740889.90 elts/sec @ 1047000000 elts
+	throughput: 4743167.73 elts/sec @ 1048000000 elts
+
+The trie crate implementation gives
+
+	Echidnatron% cargo run  --release --bin profile-insert -- 1 1 1000 1000 trie-crate
+	     Running `target/release/profile-insert 1 1 1000 1000 trie-crate`
+	throughput: 13197679.49 elts/sec @ 1000000 elts
+	throughput: 11779801.77 elts/sec @ 2000000 elts
+	throughput: 11013754.34 elts/sec @ 3000000 elts
+	throughput: 11152347.94 elts/sec @ 4000000 elts
+	throughput: 9907595.05 elts/sec @ 5000000 elts
+	...
+	throughput: 8295162.96 elts/sec @ 522000000 elts
+	throughput: 8302350.43 elts/sec @ 523000000 elts
+	throughput: 8309421.18 elts/sec @ 524000000 elts
+	...
+	throughput: 7550401.54 elts/sec @ 1046000000 elts
+	throughput: 7553511.81 elts/sec @ 1047000000 elts
+	throughput: 7556793.09 elts/sec @ 1048000000 elts
+
+It looks like Rust's abstractions may have some non-zero cost.
+
+Let's do a slightly different experiment, where instead of having 1000 keys that we rotate through, each round of one million records will have one key, so that we see about 1000 (specifically: 1048) over the course of execution. This should give the trie implementations a chance to shine, as they can avoid doing merges by just copying data.
+
+Let's start with the `Tries` implementation:
+
+	Echidnatron% cargo run --release --bin profile-insert -- 1 1000 1000 1000 tries
+	     Running `target/release/profile-insert 1 1000 1000 1000 tries`
+	throughput: 6753392.52 elts/sec @ 1000000 elts
+	throughput: 6575431.13 elts/sec @ 2000000 elts
+	throughput: 6127113.48 elts/sec @ 3000000 elts
+	throughput: 6216579.15 elts/sec @ 4000000 elts
+	throughput: 5812184.59 elts/sec @ 5000000 elts
+	...
+	throughput: 4694255.86 elts/sec @ 1046000000 elts
+	throughput: 4695949.84 elts/sec @ 1047000000 elts
+	throughput: 4697697.12 elts/sec @ 1048000000 elts
+
+And then the trie crate implementation:
+
+	Echidnatron% cargo run  --release --bin profile-insert -- 1 1000 1000 1000 trie-crate
+	     Running `target/release/profile-insert 1 1000 1000 1000 trie-crate`
+	throughput: 9390847.91 elts/sec @ 1000000 elts
+	throughput: 9049046.31 elts/sec @ 2000000 elts
+	throughput: 8574939.67 elts/sec @ 3000000 elts
+	throughput: 8741667.15 elts/sec @ 4000000 elts
+	throughput: 8081182.77 elts/sec @ 5000000 elts
+	...
+	throughput: 6522300.43 elts/sec @ 1046000000 elts
+	throughput: 6524586.42 elts/sec @ 1047000000 elts
+	throughput: 6527395.99 elts/sec @ 1048000000 elts
+
+There is some difference here, but it turns out that there is just a fair amount of cost in assembling each round of one million records, which have lots of merging, even if then merging the results are relatively cheap. We can tweak the experiment further, moving through each round's 1000 values one per batch, rather seeing each one over the 1000 batches. Just looking at the trie crate version:
+
+	Echidnatron% cargo run  --release --bin profile-inspect -- 1 1000 1000 1000 trie-crate
+	     Running `target/release/profile-inspect 1 1000 1000 1000 trie-crate`
+	throughput: 12882371.99 elts/sec @ 1000000 elts
+	throughput: 12088110.92 elts/sec @ 2000000 elts
+	throughput: 10501636.28 elts/sec @ 3000000 elts
+	throughput: 10784657.67 elts/sec @ 4000000 elts
+	throughput: 9953763.38 elts/sec @ 5000000 elts
+	...
+	throughput: 7729524.16 elts/sec @ 1046000000 elts
+	throughput: 7732909.29 elts/sec @ 1047000000 elts
+	throughput: 7736427.85 elts/sec @ 1048000000 elts
+
+This is much better, though we are pretty much just inserting sorted data at this point. It doesn't have to be, it was just an easy way to make the values distinct, but there is a silly amount of structure in the input designed to make the numbers as good as they can be. They could probably be better; I haven't profiled it yet to see what the hold-up is. 
+
+I should re-iterate that the trie-structuring isn't so much about increasing insertion throughput, though that would be great, as much as increasing capacity (check!) and simplifying indexing and navigation, something we will get to next!
 
 ## Part 4: Adding an index.
 
 Coming even later!
+
+## Part 5: Navigation rather than enumeration.
+
+After we talk about indices, surely.
